# Economic-survey-2026

./: .env.example  .gitignore  AI_EXTRACTION_GUIDE.md  IMPROVEMENTS_SUMMARY.md  LICENSE  README.md  ai_clean_chapter.py  ai_processor_enhanced.py  page_scan.txt  page_scan2.txt  process_all_chapters.py  process_chapter_with_ai.py  pyproject.toml  requirements.txt  server.py  server_backup.py  server_simple.py  test_ai_extraction.py  test_server.py
output/: _processing_summary.json  chapter_01_state_of_the_economy.json  chapter_01_state_of_the_economy.md  chapter_02_enhanced_ai.json  chapter_02_fiscal_policy.json  chapter_02_fiscal_policy.md  chapter_03_monetary_and_financial_sector.json  chapter_03_monetary_and_financial_sector.md  chapter_04_external_sector.json  chapter_04_external_sector.md  chapter_05_prices_and_inflation.json  chapter_05_prices_and_inflation.md  chapter_06_agriculture.json  chapter_06_agriculture.md  chapter_07_services_sector.json  chapter_07_services_sector.md  chapter_08_manufacturing.json  chapter_08_manufacturing.md  chapter_09_infrastructure.json  chapter_09_infrastructure.md  chapter_10_climate_and_environment.json  chapter_10_climate_and_environment.md  chapter_11_human_development.json  chapter_11_human_development.md  chapter_12_employment_and_skills.json  chapter_12_employment_and_skills.md  chapter_13_social_inclusion.json  chapter_13_social_inclusion.md  chapter_14_artificial_intelligence.json  chapter_14_artificial_intelligence.md  chapter_15_urban_development.json  chapter_15_urban_development.md  chapter_16_strategic_autonomy.json  (+6 more)
(+1 files in other folders)
